--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
 <meta charset="utf=8">
 <title>Rollens' Personal Profile</title>
 </head>
-<body>
+<body bgcolor=000000>
 <font face="Noto Sans CJK TC Regular">
+
 <br>
-<p align="center"><font size="5">葛綜棠</font></p>
-<hr size="3" align="center" width="30%" color="000000">
-<p align="center"><font size="3">系學會聯合會研習營 負責人<br>電資學院院理事<br>電機系學會副會長<br>成大火舞社活動長<br><br><br>Email:zongtang0816@gmail.com<br>Tel:0975-917093</font></p>
-<a href="https://www.facebook.com/zongtang">臉書連結</a>
+<div>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　   　　　　　  
+<img style="border-radius: 50% " src="https://scontent.ftpe7-3.fna.fbcdn.net/v/t1.0-9/15439871_1188535937895607_7442510954272607008_n.jpg?oh=9a54c211ca3f72875fb3d1361390444a&oe=5A3BA87E"width=240px height=240
+px</img></div>
+<p align="center"><font size="5" color="ffffff" >葛綜棠</font></p>
+<hr size="3" align="center" width="30%" color="ffffff">
+<p align="center"><font size="3" color="ffffff" >系學會聯合會研習營 負責人<br>電資學院院理事<br>電機系學會副會長<br>成大火舞社活動長
+<hr size="3" align="center" width="25%" color="ffffff">
+<p align="center"><font size="3" color="ffffff" >國立成功大學電機工程學系 學士班三年級<br>
+語言專長：C++
+<hr size="3" align="center" width="20%" color="ffffff">
+<p align="center"><font size="2">Stay Hungry Stay Foolish
+<br><br><br><br><br>Email:zongtang0816@gmail.com<br>Tel:0975-917093</font></p>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　
+<a href="https://www.facebook.com/zongtang"><img src ="http://www.iconarchive.com/download/i49146/yootheme/social-bookmark/social-facebook-box-blue.ico"width=25 height=25</img></a>
+<a href="https://github.com/Rollens"><img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png"width=25 height=25</img>
+
 </body>
 </html>
 
